# awake

./: .gitignore  README.md  flake.nix  meson.build
data/: gschema.xml  meson.build  resources.xml
src/: Indicator.vala  meson.build
